# Dataset-JSON-1.1-Interface

./: README.md  app.py  pyproject.toml  requirements.txt  xpt_to_json.py
static/css/: custom.css  icon.css  material-dashboard.css
templates/: JSON.html  JSONMeta.html  JSONfile.html
