[project]
name = "Dataset-JSON-1-1-Interface"
version = "0.1.0"
description = "A project for interfacing with Dataset JSON 1.1"
authors = [{ name = "Swetha Rameswaran", email = "swetha.rameswaran@pfizer.com" },{ name = "Sai Pooja VR", email = "saipooja.vr@pfizer.com" },{ name = "Deepika S", email = "deepika.s@pfizer.com" },{ name = "Aishwarya LR", email = "aishwarya.lr@pfizer.com" },{ name = "Natarajan Vijaikumar", email = "natarajan.vijaikumar@pfizer.com" }]
maintainers = [{ name = "Swetha Rameswaran", email = "swetha.rameswaran@pfizer.com" },{ name = "Sai Pooja VR", email = "saipooja.vr@pfizer.com" },{ name = "Deepika S", email = "deepika.s@pfizer.com" }]
readme = "README.md"
license = { file = "Apache-2.0" }
keywords = ["dataset", "json", "CDISC", "python","interface"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: Apache-2.0 License",
    "Programming Language :: Python :: 3.10",
]
requires-python = ">=3.10"
dependencies = [
    "Flask == 2.3.3",
    "ndjson == 0.3.1",
    "pyreadstat == 1.2.3",
    "pandas == 2.1.3",
    "xport == 3.6.1",
]
